# pip-vs-uv

./: .gitignore  README.md
pip-example/: Dockerfile  requirements.txt
uv-example/: Dockerfile  hello.py  pyproject.toml
uv-project-example/: README.md  hello.py  pyproject.toml
uv-project-example/src/uv_project_example/: __init__.py  main.py
uv-script-example/: README.md  example.py
