[project]
name = "uv_project_example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Thomas La Piana", email = "tlapiana@pm.me" }]
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=8.32.0",
 "mypy>=1.15.0",
]
